Cancel drag when drop doesn't navigate.

Dropping a URL on a plugin doesn't cause a navigation. The drag and drop
code, however, didn't bother clearing its state when a URL was dropped
since a navigation would usually clear out the entire page.

The bug was causing the "slow" scrolling of wheels because the
autoscroll controller was constantly canceling active animations. This
happens because the EventHandler would put the AutoscrollController into
"drag" mode but it would never cause it to exit when the URL was
dropped.

https://crrev.com/2784313002 exposed this bug because dragging
over a scrollbar would previously return nullptr from the hit test so
we never put the AutoscrollController into "drag" mode. However, we just
got lucky as the <embed> for a PDF is `position: fixed` and so it
prevents autoscrolling but this is a more general problem.

The fix here is to simply tell the EventHandler, in the case of a
non-navigating URL drop, to cancel the existing DragAndDrop. This clears
out the relevant state.

Bug: 733996
Change-Id: Idcf8f502de1a895e6fef4c9be0cfa0edd7204d49