third_party/WebKit/Source/core/page/AutoscrollController.h
@@ -71,7 +71,8 @@ class CORE_EXPORT AutoscrollController final
   // Selection and drag-and-drop autoscroll.
   void Animate(double monotonic_frame_begin_time);
   bool SelectionAutoscrollInProgress() const;
-  bool AutoscrollInProgress(const LayoutBox*) const;
+  bool AutoscrollInProgressFor(const LayoutBox*) const;
+  bool AutoscrollInProgress() const;
   void StartAutoscrollForSelection(LayoutObject*);
   void StopAutoscroll();
   void StopAutoscrollIfNeeded(LayoutObject*);
