third_party/WebKit/Source/core/page/DragController.cpp
@@ -241,7 +241,7 @@ void DragController::DragExited(DragData* drag_data, LocalFrame& local_root) {
   file_input_element_under_mouse_ = nullptr;
 }
 
-bool DragController::PerformDrag(DragData* drag_data, LocalFrame& local_root) {
+void DragController::PerformDrag(DragData* drag_data, LocalFrame& local_root) {
   DCHECK(drag_data);
   document_under_mouse_ =
       local_root.DocumentAtPoint(drag_data->ClientPosition());
@@ -277,26 +277,31 @@ bool DragController::PerformDrag(DragData* drag_data, LocalFrame& local_root) {
     if (prevented_default) {
       document_under_mouse_ = nullptr;
       CancelDrag();
-      return true;
+      return;
     }
   }
 
   if ((drag_destination_action_ & kDragDestinationActionEdit) &&
       ConcludeEditDrag(drag_data)) {
     document_under_mouse_ = nullptr;
-    return true;
+    return;
   }
 
   document_under_mouse_ = nullptr;
 
-  if (OperationForLoad(drag_data, local_root) == kDragOperationNone)
-    return false;
-
-  if (page_->GetSettings().GetNavigateOnDragDrop()) {
-    page_->MainFrame()->Navigate(
-        FrameLoadRequest(nullptr, ResourceRequest(drag_data->AsURL())));
+  if (OperationForLoad(drag_data, local_root) != kDragOperationNone) {
+    if (page_->GetSettings().GetNavigateOnDragDrop()) {
+      page_->MainFrame()->Navigate(
+          FrameLoadRequest(nullptr, ResourceRequest(drag_data->AsURL())));
+    } else {
+      DataTransfer* data_transfer =
+          CreateDraggingDataTransfer(kDataTransferReadable, drag_data);
+      data_transfer->SetSourceOperation(
+          drag_data->DraggingSourceOperationMask());
+      local_root.GetEventHandler().CancelDragAndDrop(
+          CreateMouseEvent(drag_data), data_transfer);
+    }
   }
-  return true;
 }
 
 void DragController::MouseMovedIntoDocument(Document* new_document) {
