third_party/WebKit/Source/core/page/DragControllerTest.cpp
@@ -4,6 +4,7 @@
 
 #include "core/page/DragController.h"
 
+#include "core/clipboard/DataObject.h"
 #include "core/editing/FrameSelection.h"
 #include "core/frame/LocalFrame.h"
 #include "core/frame/LocalFrameView.h"
@@ -11,9 +12,17 @@
 #include "core/frame/VisualViewport.h"
 #include "core/html/HTMLElement.h"
 #include "core/layout/LayoutObject.h"
+#include "core/layout/LayoutView.h"
+#include "core/page/AutoscrollController.h"
+#include "core/page/DragData.h"
+#include "core/page/DragSession.h"
 #include "core/testing/DummyPageHolder.h"
+#include "core/testing/sim/SimDisplayItemList.h"
+#include "core/testing/sim/SimRequest.h"
+#include "core/testing/sim/SimTest.h"
 #include "core/timing/Performance.h"
 #include "platform/DragImage.h"
+#include "platform/testing/RuntimeEnabledFeaturesTestHelpers.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
 namespace blink {
@@ -66,4 +75,54 @@ TEST_F(DragControllerTest, dragImageForSelectionUsesPageScaleFactor) {
   EXPECT_EQ(image1->Size().Width() * 2, image2->Size().Width());
   EXPECT_EQ(image1->Size().Height() * 2, image2->Size().Height());
 }
+
+class DragControllerSimTest : public ::testing::WithParamInterface<bool>,
+                              private ScopedRootLayerScrollingForTest,
+                              public SimTest {
+ public:
+  DragControllerSimTest() : ScopedRootLayerScrollingForTest(GetParam()) {}
+};
+
+INSTANTIATE_TEST_CASE_P(All, DragControllerSimTest, ::testing::Bool());
+
+// Tests that dragging a URL onto a WebWidget that doesn't navigate on Drag and
+// Drop clears out the Autoscroll state. Regression test for
+// https://crbug.com/733996.
+TEST_P(DragControllerSimTest, DropURLOnNonNavigatingClearsState) {
+  WebView().GetPage()->GetSettings().SetNavigateOnDragDrop(false);
+  WebView().Resize(WebSize(800, 600));
+  SimRequest main_resource("https://example.com/test.html", "text/html");
+
+  LoadURL("https://example.com/test.html");
+
+  // Page must be scrollable so that Autoscroll is engaged.
+  main_resource.Complete(
+      "<!DOCTYPE html>"
+      "<style>body,html { height: 1000px; width: 1000px; }</style>");
+
+  Compositor().BeginFrame();
+
+  DataObject* object = DataObject::Create();
+  object->SetURLAndTitle("https://www.example.com/index.html", "index");
+  DragData data(
+      object, IntPoint(10, 10), IntPoint(10, 10),
+      static_cast<DragOperation>(kDragOperationCopy | kDragOperationLink |
+                                 kDragOperationMove));
+
+  WebView().GetPage()->GetDragController().DragEnteredOrUpdated(
+      &data, *GetDocument().GetFrame());
+
+  // The page should tell the AutoscrollController about the drag.
+  EXPECT_TRUE(
+      WebView().GetPage()->GetAutoscrollController().AutoscrollInProgress());
+
+  WebView().GetPage()->GetDragController().PerformDrag(
+      &data, *GetDocument().GetFrame());
+
+  // Once we've "performed" the drag (in which nothing happens), the
+  // AutoscrollController should have been cleared.
+  EXPECT_FALSE(
+      WebView().GetPage()->GetAutoscrollController().AutoscrollInProgress());
+}
+
 }  // namespace blink
